--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,8 +15,8 @@
 }
 
 .visually-hidden {
-  color:red;
-  /* position: absolute;
+  /* color: red; */
+  position: absolute;
   width: 1px;
   height: 1px;
   margin: -1px;
@@ -25,7 +25,7 @@
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
-  overflow: hidden; */
+  overflow: hidden;
 }
 
 html {
@@ -54,6 +54,11 @@ body {
 
 .main-container {
   flex-grow: 1;
+}
+
+.content-container {
+  width: 1059px;
+  margin: 0 auto;
 }
 
 /* BUTTONS */
@@ -99,22 +104,82 @@ body {
 /* TEXTS */
 
 .section-heading {
+  max-width: 620px;
+  margin: 0 auto;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
-
 }
 
 /* HEADER */
 
+.page-header {
+  height: 65px;
+  z-index: 999;
+}
+
+.header-container {
+  display: flex;
+}
+
+.logo-header {
+  z-index: 999;
+}
+
+.navigation {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  margin-left: 45px;
+}
+
+.navigation-list {
+  display: flex;
+  flex-grow: 1;
+  column-gap: 34px;
+  height: 100%;
+  padding-left: 0;
+  margin: 0;
+  list-style: none;
+}
+
 .navigation-link {
+  display: block;
+  width: fit-content;
+  height: 64px;
   font-size: 20px;
   font-weight: 700;
+  line-height: 70px;
   text-align: center;
   text-decoration: none;
   color: inherit;
+}
+
+.navigation-link-current {
+  border-bottom: 2px solid #756257;
+}
+
+.navigation-link:hover,
+.navigation-link:focus {
+  color: #756157;
+}
+
+.navigation-link:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+.navigation-link-current:hover,
+.navigation-link-current:focus,
+.navigation-link-current:active {
+  color: #000000;
+}
+
+.header-search {
+  background-image: url(../images/icons/search.svg);
+  background-size: auto;
+
 }
 
 .favorites-count-circle {
@@ -133,35 +198,78 @@ body {
 
 /* MAIN START SCREEN */
 
-.main-index {
+.start-screen {
+  height: 379px;
+  padding-top: 51px;
+  padding-bottom: 55px;
   background-color: #61859D;
   background-image: url("../images/backgrounds/index-background.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
 }
 
+.start-motto {
+  display: block;
+  margin: 0 auto;
+}
+
 /* ADVANTAGES */
 
-.advantages {
-  background-color: #FFFFFF;
+.advantages-section {
+  padding-top: 63px;
+  padding-bottom: 90px;
+}
+
+.advantages-heading {
+  max-width: 620px;
+  margin: 0 auto;
 }
 
 .main-paragraph {
+  margin: 0;
   text-align: center;
   color: #333333;
 }
 
+.advantages-paragraph {
+  margin-top: 31px;
+}
+
 .advantages-list {
+  display: grid;
+  grid-template-columns: 400px 400px 400px;
+  grid-template-rows: 384px 384px 384px 384px;
+  padding: 0;
+  margin: 0;
   list-style-type: none;
 }
 
+.advatages-list-item-with-sublist {
+  grid-column: 1 / 4;
+  grid-row: 1 / 3;
+}
+
+.advantages-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 230px;
+  height: 200px;
+  padding: 92px 85px;
+}
+
+
 .advantages-main-item {
+  display: flex;
   background-color: #82B3D3;
   color: #FFFFFF;
 }
 
-.advantages-item {
-  color: #000000;
+.advantages-sublist {
+  display: flex;
+  flex-direction: row;
+  padding: 0;
 }
 
 .advantages-item-lightblue {
@@ -190,6 +298,27 @@ body {
   list-style-type: none;
 }
 
+.advantages-item-bridge {
+  flex-direction: row-reverse;
+  grid-column: 1/4;
+}
+
+/* ЗАИНТЕРЕСОВАЛИСЬ? */
+
+.hotel-search {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 233px;
+  padding-top: 91px;
+  padding-bottom: 93px;
+}
+
+.hotel-paragraph {
+  max-width: 592px;
+}
+
 .button-hotel-search {
   width: 574px;
   height: 60px;
@@ -197,7 +326,13 @@ body {
   line-height: 60px;
 }
 
+/* ПОДПИШИТЕСЬ НА РАССЫЛКУ */
+
 .subscribe {
+  min-height: 231px;
+  padding: 90px 200px;
+  display: flex;
+  flex-direction: column;
   background-image: url("../images/backgrounds/subscribe-background.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
@@ -206,6 +341,49 @@ body {
 
 .white-paragraph {
   color: #FFFFFF;
+}
+
+.subscription-form {
+  display: flex;
+}
+
+.subscribe-paragraph {
+  max-width: 475px;
+  margin: 0 auto;
+  margin-top: 26px;
+  margin-bottom: 46px;
+}
+
+.subscription-field {
+  width: 75%;
+  height: 58px;
+  padding-left: 22px;
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 10px 0 0 10px;
+}
+
+.subscription-button {
+  width: 25%;
+  height: 60px;
+  font-size: 20px;
+  border-radius: 0 10px 10px 0;
+}
+
+/* FOOTER */
+
+.links-phone-footer {
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+}
+
+.networks-list {
+  display: flex;
+  min-height: 120px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .footer-phone-number {
