--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,6 +29,7 @@
 
 html {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -415,6 +416,18 @@ body {
   font-size: 18px;
 }
 
+.subscription-field:hover,
+.subscription-field:focus {
+  background-color: #E6E6E6;
+}
+
+.subscription-field:focus,
+.subscription-field:active {
+  border: 3px solid #83B3D3;
+  outline: none;
+  height: 52px;
+}
+
 .subscription-button {
   width: 25%;
   height: 60px;
@@ -478,7 +491,7 @@ body {
 .filter-section {
   padding-top: 35px;
   padding-left: 70px;
-  padding-bottom: 70px;
+  padding-bottom: 55px;
   padding-right: 70px;
   background-image: url("../images/backgrounds/catalog-background.jpg");
   background-size: 100% auto;
@@ -487,23 +500,46 @@ body {
 }
 
 .header-catalog-heading {
-  margin: 0;
+  margin-top: 27px;
+  margin-bottom: 33px;
   text-align: left;
   font-weight: 700;
   font-size: 60px;
-  line-height: 78px;
 }
 
 .breadcrumbs {
-  margin-top: 5px;
+  display: flex;
+  gap: 5px;
+  align-items: center;
 }
 
 .breadcrumbs-item {
   font-size: 16px;
 }
 
+.bredcrumbs-icon {
+  display: flex;
+}
+
+.breadcrumbs-item-icon-svg {
+  fill: #FFFFFF;
+}
+
+.breadcrumbs-item-icon-svg:hover {
+  fill: rgba(255, 255, 255, 0.6);
+}
+
+.breadcrumbs-item-icon-svg:active {
+  fill: rgba(255, 255, 255, 0.3);
+}
+
 .hotel-filter {
   margin-top: 40px;
+}
+
+.hotel-filter-left {
+  display: flex;
+  gap: 70px;
 }
 
 .hotel-filter-form {
@@ -515,12 +551,14 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   border: none;
 }
 
-.hotel-filter-group-price {
-  padding-left: 105px;
+.hotel-filter-option-list {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .hotel-filter-title {
@@ -532,16 +570,63 @@ body {
 }
 
 .hotel-filter-option {
-  font-size: 18px;
-  margin-top: 15px;
+  position: relative;
+  display: block;
 }
 
-.hotel-filter-option-input {
+.hotel-filter-option:hover .hotel-filter-option-mark {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.hotel-filter-option:focus .hotel-filter-option-mark {
+  background-color: rgba(255, 255, 255, 0.6);
+  border: 3px solid #83B3D3;
+  border-radius: 4px;
+}
+
+.hotel-filter-option:active .hotel-filter-option-mark {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.hotel-filter-option-label {
+  font-size: 18px;
+  padding-left: 40px;
+}
+
+.hotel-filter-option-mark {
+  position: absolute;
+  top: 2px;
   width: 20px;
   height: 20px;
-  margin-top: auto;
-  margin-bottom: auto;
-  border: none;
+  background-color: #FFFFFF;
+  border-radius: 4px;
+}
+
+.hotel-filter-option-input[type="checkbox"]:checked + .hotel-filter-option-mark::before {
+  position: absolute;
+  left: 4px;
+  top: -5px;
+  content: url("../images/icons/tick.svg");
+}
+
+.hotel-filter-option-input[type="radio"] + .hotel-filter-option-mark {
+  border-radius: 50%;
+}
+
+.hotel-filter-option-input[type="radio"]:checked + .hotel-filter-option-mark::before {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 10px;
+  height: 10px;
+  background-color: #3F5E72;
+  border-radius: 50%;
+  content: "";
+}
+
+.hotel-filter-right {
+  display: flex;
+  gap: 30px;
 }
 
 .price-range-number {
@@ -591,12 +676,13 @@ body {
   max-height: 20px;
   background: none;
   border: none;
-  padding: 10px;
+  padding: 20px;
 }
 
 .filter-buttons {
   display: flex;
   flex-direction: column;
+  margin-top: auto;
 }
 
 .catalog-header-link{
@@ -616,13 +702,24 @@ body {
 /* catalog main section */
 
 .catalog-header-container {
-  max-width: 1057px;
-  margin: 0 auto;
+  margin-top: 55px;
+  margin-bottom: 55px;
   display: flex;
 }
 
 .search-results-heading {
   text-align: left;
+  margin: 0;
+  flex-grow: 1;
+}
+
+.search-results-view {
+  min-width: 50%;
+}
+
+.view-select {
+  display: flex;
+  flex-direction: row;
 }
 
 .hotel-card-container {
@@ -643,7 +740,7 @@ body {
 
 .hotel-card-title {
   margin: 0;
-  margin-top: 16px;
+  margin-top: 10px;
   font-size: 24px;
   line-height: 28px;
 }
@@ -694,7 +791,19 @@ body {
 /* PAGINATION */
 
 .pagination {
+  display: flex;
+  padding-top: 30px;
+  padding-bottom: 25px;
+  border-top: 1px solid #E6E6E6;
+}
+
+.pagination-list {
+  flex-grow: 1;
   list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 8px;
 }
 
 .pagination-link {
