--- a/styles/styles.css
+++ b/styles/styles.css
@@ -203,7 +203,7 @@ body {
   top: -55px;
   left: 25px;
   border-radius: 10px;
-  min-width: 20px;
+  width: 20px;
   height: 20px;
   background-color: #7DB54F;
   font-size: 10px;
