--- a/styles/styles.css
+++ b/styles/styles.css
@@ -518,7 +518,7 @@ body {
 .filter-section {
   padding-top: 35px;
   padding-left: 70px;
-  padding-bottom: 64px;
+  padding-bottom: 66px;
   padding-right: 70px;
   background-image: url("../images/backgrounds/catalog-background.jpg");
   background-size: 100% auto;
@@ -527,15 +527,17 @@ body {
 }
 
 .header-catalog-heading {
-  margin-top: 27px;
-  margin-bottom: 33px;
+  margin-top: 7px;
+  margin-bottom: 19px;
   text-align: left;
   font-weight: 700;
   font-size: 60px;
+  line-height: 60px;
 }
 
 .breadcrumbs {
   display: flex;
+  flex-wrap: wrap;
   gap: 5px;
   align-items: center;
 }
@@ -572,7 +574,7 @@ body {
 .hotel-filter-form {
   display: flex;
   flex-wrap: wrap;
-  gap: 171px;
+  justify-content: space-between;
 }
 
 .hotel-filter-group {
@@ -778,7 +780,7 @@ body {
 
 .filter-submit-button {
   width: 160px;
-  height: 48px;
+  min-height: 48px;
 }
 
 .filter-reset-button {
@@ -894,7 +896,7 @@ body {
 .hotel-card-container {
   display: grid;
   grid-template-columns: 340px 340px 340px;
-  grid-auto-rows: 438px;
+  grid-auto-rows: minmax(438px, auto);
   column-gap: 18px;
 }
 
@@ -902,8 +904,14 @@ body {
   padding: 20px;
 }
 
+.hotel-card-image-container {
+  width: 300px;
+  height: 211px;
+  overflow: hidden
+}
+
 .hotel-card-image {
-  object-fit: cover;
+  max-width: 300px;
 }
 
 .hotel-card-link {
@@ -972,7 +980,7 @@ body {
 .hotel-rating {
   margin: 0;
   border-radius: 4px;
-  height: 37px;
+  min-height: 37px;
   background-color: #F2F2F2;
   text-align: center;
   text-transform: uppercase;
@@ -1005,7 +1013,7 @@ body {
 
 .pagination-link {
   display: block;
-  width: 60px;
+  min-width: 60px;
   height: 60px;
   border-radius: 4px;
   background-color: #82B3D3;
